:heavy_plus_sign: 이미지 resizer 모듈 설치 및 프로필 이미지 업로드 api 개선
